--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
           <!-- The ul tag (unordered list) is used here as it is a collection of cards for which the order doesn't really matter. -->
-          <ul>
+          <ul class="staff__cards">
             <li class="card">
               <div class="card__content">
                 <h3 class="card__title">Introduction to Algorithms</h3>
@@ -288,11 +288,46 @@
               the American Geophysical Union.
             </p>
           </div>
-          <!-- <div class="about__circle"></div> -->
+          <div class="about__circle"></div>
         </section>
       </main>
       <footer class="footer" id="footer">
-        <!-- The time to mark up the footer has come, you can do it 💪 -->
+        <section class="footer__columns">
+          <div class="footer__column">
+            <h3 class="footer__logo">Practicum</h3>
+          </div>
+          <div class="footer__column footer__column_content_hours">
+            <h5 class="footer__column-heading">Hours</h5>
+            <ul class="footer__list">
+              <li class="footer__list-item">Weekdays: 9am – 8pm</li>
+              <li class="footer__list-item">Weekends: 10am – 6pm</li>
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <h5 class="footer__column-heading">Social Media</h5>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#"
+                  ><img
+                    class="footer__social-icons"
+                    src="/images/facebook_white.svg"
+                    alt="Facebook Logo"
+                  />Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#"
+                  ><img
+                    class="footer__social-icons"
+                    src="/images/instagram_white.svg"
+                    alt="Instagram Logo"
+                  />Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
+        </section>
+        <p class="footer__copyright-element">&#169; 2022 Jensen Bean</p>
       </footer>
     </div>
   </body>
