--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <a class="footer__column-link" href="#"
                   ><img
                     class="footer__social-icons"
-                    src="/images/facebook_white.svg"
+                    src="./images/facebook_white.svg"
                     alt="Facebook Logo"
                   />Facebook</a
                 >
@@ -319,7 +319,7 @@
                 <a class="footer__column-link" href="#"
                   ><img
                     class="footer__social-icons"
-                    src="/images/instagram_white.svg"
+                    src="./images/instagram_white.svg"
                     alt="Instagram Logo"
                   />Instagram</a
                 >
