--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
           <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer" id="footer">
-        <section class="footer__columns">
+      <footer class="footer">
+        <section class="footer__columns" id="footer">
           <div class="footer__column">
             <h3 class="footer__logo">Practicum</h3>
           </div>
