--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             alt="Practicum Library Logo"
             class="logo"
           />
-          <!-- Putting navigation links in a list is supposed to be the best practice of writing the semantic code since it allows screen readers to pause between each link instead of reading all the links as a sentence. -->
           <ul class="nav__links">
             <li>
               <a class="nav__link" href="#staff">Staff picks</a>
@@ -59,7 +58,6 @@
         <section class="staff" id="staff">
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
-          <!-- The ul tag (unordered list) is used here as it is a collection of cards for which the order doesn't really matter. -->
           <ul class="staff__cards">
             <li class="card">
               <div class="card__content">
@@ -162,7 +160,6 @@
             </p>
             <a href="#" class="events__more">More events &rarr;</a>
           </div>
-          <!-- Start creating the composition here -->
           <div class="events__cover">
             <img
               src="images/cafe.png"
@@ -172,7 +169,7 @@
             <div class="person person_name_feynman">
               <p class="person__caption">Joan Feynman</p>
               <img
-                class="person__image person__image_size_1"
+                class="person__image person__image_size_l"
                 src="images/person_feynman.png"
                 alt="Picture of Feynman"
               />
@@ -180,14 +177,14 @@
             <div class="person person_name_burbidge">
               <p class="person__caption">Margaret Burbidge</p>
               <img
-                class="person__image person__image_size_l"
+                class="person__image person__image_size_m"
                 alt="Picture of Burbidge"
                 src="images/person_burbidge.png"
               />
             </div>
             <div class="person person_name_cannon">
               <img
-                class="person__image person__image_size_l"
+                class="person__image person__image_size_m"
                 alt="Picture of Cannon"
                 src="images/person_cannon.png"
               />
@@ -195,7 +192,7 @@
             </div>
             <div class="person person_name_mitchell">
               <img
-                class="person__image person__image_size_l"
+                class="person__image person__image_size_s"
                 alt="Picture of Mitchell"
                 src="images/person_mitchell.png"
               />
@@ -204,7 +201,7 @@
             <div class="person person_name_tarter">
               <p class="person__caption">Jill Tarter</p>
               <img
-                class="person__image person__image_size_l"
+                class="person__image person__image_size_m"
                 alt="Picture of Tarter"
                 src="images/person_tarter.png"
               />
@@ -294,17 +291,17 @@
       <footer class="footer">
         <section class="footer__columns" id="footer">
           <div class="footer__column">
-            <h3 class="footer__logo">Practicum</h3>
+            <img class="footer__logo" href="./images/logo_practicum.svg" alt="Practicum Logo">
           </div>
           <div class="footer__column footer__column_content_hours">
-            <h5 class="footer__column-heading">Hours</h5>
+            <h4 class="footer__column-heading">Hours</h5>
             <ul class="footer__list">
               <li class="footer__list-item">Weekdays: 9am – 8pm</li>
               <li class="footer__list-item">Weekends: 10am – 6pm</li>
             </ul>
           </div>
           <div class="footer__column footer__column_content_social">
-            <h5 class="footer__column-heading">Social Media</h5>
+            <h4 class="footer__column-heading">Social Media</h5>
             <ul class="footer__list">
               <li class="footer__list-item">
                 <a class="footer__column-link" href="#"
