--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       <footer class="footer">
         <section class="footer__columns" id="footer">
           <div class="footer__column">
-            <img class="footer__logo" href="./images/logo_practicum.svg" alt="Practicum Logo">
+            <img class="footer__logo" src="./images/logo_practicum.svg" alt="Practicum Logo">
           </div>
           <div class="footer__column footer__column_content_hours">
             <h4 class="footer__column-heading">Hours</h5>
