--- a/index.html
+++ b/index.html
@@ -291,17 +291,21 @@
       <footer class="footer">
         <section class="footer__columns" id="footer">
           <div class="footer__column">
-            <img class="footer__logo" src="./images/logo_practicum.svg" alt="Practicum Logo">
+            <img
+              class="footer__logo"
+              src="./images/logo_practicum.svg"
+              alt="Practicum Logo"
+            />
           </div>
           <div class="footer__column footer__column_content_hours">
-            <h4 class="footer__column-heading">Hours</h5>
+            <h4 class="footer__column-heading">Hours</h4>
             <ul class="footer__list">
               <li class="footer__list-item">Weekdays: 9am – 8pm</li>
               <li class="footer__list-item">Weekends: 10am – 6pm</li>
             </ul>
           </div>
           <div class="footer__column footer__column_content_social">
-            <h4 class="footer__column-heading">Social Media</h5>
+            <h4 class="footer__column-heading">Social Media</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
                 <a class="footer__column-link" href="#"
