Fix class names

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               <li class="footer__list-item">
                 <a class="footer__column-link" href="#"
                   ><img
-                    class="footer__social-icons"
+                    class="footer__social-icon"
                     src="./images/facebook_white.svg"
                     alt="Facebook Logo"
                   />Facebook</a
@@ -319,7 +319,7 @@
               <li class="footer__list-item">
                 <a class="footer__column-link" href="#"
                   ><img
-                    class="footer__social-icons"
+                    class="footer__social-icon"
                     src="./images/instagram_white.svg"
                     alt="Instagram Logo"
                   />Instagram</a
